--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <p>Aqui vai o código HTML que fará seu site aparecer.</p>
+    <header class="l-header">
+        <nav class="nav bd-grid">
+            <div>
+                <a href="#" class="nav__logo">Álcool</a>
+            </div>
+
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Sobre</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Serviços</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Depoimentos</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Contato</a></li>
+                </ul>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="bx bx-menu"></i>
+            </div>
+
+        </nav>
+    </header>
+
+    <main class="l-main">
+      <section class="home bd-grid" id="home">
+        <div class="home__data">
+            <h1 class="home__title">Hi, <br>I'am <span class="home__title-color">Héuller</span></h1>
+            <a href="#" class="button">Contato</a>
+        </div>
+      </section>  
+    </main>
 
     <script src="assets/js/main.js"></script>
   </body>
