primeiro dia finalizado - falta botao entrar na home e scroll

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>Álcool+ | Inatel</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <!--Icones-->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
   </head>
   <body>
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Álcool</a>
+                <a href="#" class="nav__logo"><img class="logo-image" src="assets/img/Alcool.png" alt="logo"></a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -30,14 +31,118 @@
         </nav>
     </header>
 
-    <main class="l-main">
-      <section class="home bd-grid" id="home">
-        <div class="home__data">
-            <h1 class="home__title">Hi, <br>I'am <span class="home__title-color">Héuller</span></h1>
-            <a href="#" class="button">Contato</a>
-        </div>
-      </section>  
+    <main class="l-main">  
+        <section class="about section">
+            <img class="image-hero" src="assets/img/Alcool.png" alt="">
+
+            <h2 class="section-title">Sobre</h2>
+            <div class="bd-grid about__container">
+                <p class="about__text">Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.
+                </p>
+            </div>
+        </section>
+
+        <section class="services section">
+            <h2 class="section-title">Serviços</h2>
+            <div class="bd-grid about__container">
+                <p class="about__text">Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.
+                </p>
+            </div>
+        </section>
+
+        <section class="depoiments section">
+            <h2 class="section-title">Depoimentos</h2>
+            <div class="bd-grid about__container">
+                <p class="about__text">Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.
+                </p>
+            </div>
+        </section>
+
+        <section class="contacts section">
+            <h2 class="section-title">Contato</h2>
+            <div class="bd-grid about__container">
+                <p class="about__text">Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.Id eu commodo nulla aliqua incididunt reprehenderit amet. 
+                    Aliqua veniam nostrud incididunt duis nisi incididunt aliquip 
+                    nisi tempor amet. Fugiat ullamco dolor exercitation minim occaecat ipsum 
+                    amet laborum exercitation ea nostrud ad velit.
+                </p>
+            </div>
+        </section>
     </main>
+
+
+    <div class='footer-container'>
+        <section class='footer-subscription'>
+          <p class='footer-subscription-heading'>
+              Seja membro exclusivo da Álcool+ para receber novidades e cupons de desconto!
+          </p>
+          <p class='footer-subscription-text'>
+            Você pode se desinscrever a qualquer momento.
+          </p>
+          <div class='input-areas'>
+            <form>
+              <input
+                class='footer-input'
+                name='email'
+                type='email'
+                placeholder='Seu email'
+              />
+              <Button buttonStyle='btn--outline' type="submit">Inscrever-se</Button>
+            </form>
+          </div>
+        </section>
+        <section class='social-media'>
+          <div class='social-media-wrap'>
+            <div class='footer-logo'>
+                <a class='social-logo'>Álcool+</a>
+                <img alt="description" class="navbar-logo-image" src="">
+            </div>
+            <div>
+                <p class="website-rights">Desenvolvido por Héuller</p>
+            </div>
+            <small class='website-rights'>Álcool+ © 2021</small>
+          </div>
+        </section>
+      </div>
+
+
+
+
+
+
 
     <script src="assets/js/main.js"></script>
   </body>
