tela cadastrar pronta, falta validação

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="buttons-entrar-registrar">
                     <h1 class="home__title">Olá,<br>nós somos a <span class="home__title-color"><br>Álcool+</span></h1>
                     <a href="./signin.html" class="button">ENTRAR</a>
-                    <a href="./signup.html" class="button button-register">REGISTRAR</a>
+                    <a href="./signup.html" class="button button-register">CADASTRAR</a>
                 </div>
                 
             </div>
