--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="home__data">
                 <div class="buttons-entrar-registrar">
                     <h1 class="home__title">Olá,<br>nós somos a <span class="home__title-color"><br>Álcool+</span></h1>
-                    <a href="./view/signin.html" class="button">ENTRAR</a>
+                    <a href="./view/signin.php" class="button">ENTRAR</a>
                     <a href="./view/signup.php" class="button button-register">CADASTRAR</a>
                 </div>
                 
